RESOLVED FIXED274586
[Remote Inspection] Right click > Toggle Visibility sometimes fails to reveal hidden elements
https://bugs.webkit.org/show_bug.cgi?id=274586
Summary [Remote Inspection] Right click > Toggle Visibility sometimes fails to reveal...
Wenson Hsieh
Reported 2024-05-23 08:42:01 PDT
.
Attachments
Wenson Hsieh
Comment 1 2024-05-23 08:45:25 PDT
EWS
Comment 2 2024-05-23 10:18:45 PDT
Committed 279213@main (6ddb740bdea7): <https://commits.webkit.org/279213@main> Reviewed commits have been landed. Closing PR #28985 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2024-05-23 10:19:15 PDT
Note You need to log in before you can comment on or make changes to this bug.