[Remote Inspection] Right click > Toggle Visibility sometimes fails to reveal hidden elements https://bugs.webkit.org/show_bug.cgi?id=274586

Reviewed by Aditya Keerthi.

Make a couple of minor adjustments to undo initial visibility adjustment rules when Web Inspector
resets "Toggle Visibility" state for targeted elements.

* Source/WebCore/page/ElementTargetingController.cpp:
(WebCore::ElementTargetingController::adjustVisibilityInRepeatedlyTargetedRegions):
(WebCore::ElementTargetingController::reset):
(WebCore::ElementTargetingController::resetVisibilityAdjustments):
* Source/WebCore/page/ElementTargetingController.h:
* Source/WebKit/UIProcess/API/Cocoa/_WKTargetedElementInfo.mm:
(-[_WKTargetedElementInfo debugDescription]):

Also, add a `-debugDescription` to make debug logging more useful.

* Tools/TestWebKitAPI/Tests/WebKitCocoa/ElementTargetingTests.mm:
(TestWebKitAPI::TEST(ElementTargeting, RequestElementsFromSelectors)):

Canonical link: https://commits.webkit.org/279213@main