Source/WebKit/UIProcess/API/Cocoa/_WKTargetedElementInfo.mm
@@ -181,4 +181,25 @@
     return _info->hasAudibleMedia();
 }
 
+- (NSString *)debugDescription
+{
+    auto firstSelector = [&]() -> String {
+        auto& allSelectors = _info->selectors();
+        if (allSelectors.isEmpty())
+            return { };
+
+        if (allSelectors.last().isEmpty())
+            return { };
+
+        // Most relevant selector for the final target element (after all enclosing shadow
+        // roots have been resolved).
+        return allSelectors.last().first();
+    }();
+
+    auto bounds = _info->boundsInRootView();
+    return [NSString stringWithFormat:@"<%@ %p \"%@\" at {{%.0f,%.0f},{%.0f,%.0f}}>"
+        , self.class, self, (NSString *)firstSelector
+        , bounds.x(), bounds.y(), bounds.width(), bounds.height()];
+}
+
 @end
